# kukuryku

./: .gitignore  Cargo.toml  README.md  plan.md
docs/: debug-silent-tts.md  ryk-cli-and-daemon.md  tract-support-plan.md
examples/: tract_probe.rs
src/: install.rs  lib.rs  main.rs  serve.rs  tract_backend.rs
tools/: bench_conv.sh  fetch_assets.sh  split_kokoro.py
