[package]
name = "speak_tts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "speak"
path = "src/main.rs"

[[bin]]
name = "kokoro"
path = "src/bin/kokoro.rs"
required-features = ["onnx"]

# Pure-Rust counterpart of `kokoro`; same pipeline, tract instead of onnxruntime.
[[bin]]
name = "kokoro-tract"
path = "src/bin/kokoro_tract.rs"
required-features = ["tract"]

[dependencies]
# kaarrot fork: CPU decode fast path (forward_decode_token_into + repack kernels).
# Enable at runtime with CANDLE_CPU_DECODE_EXECUTOR=1 and build with
# RUSTFLAGS='-C target-cpu=native' (AVX2+FMA) to engage the SIMD kernels.
candle-core = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed" }
candle-nn = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed" }
candle-transformers = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed" }
tokenizers = "0.20"
hf-hub = "0.4"
serde_json = "1"
bytemuck = "1"
anyhow = "1"
# Kokoro prototype (bin: kokoro) — ONNX Runtime via load-dynamic: the binary
# dlopens an onnxruntime .so at runtime (ORT_DYLIB_PATH) instead of static-linking
# a prebuilt one. Avoids the glibc-2.38 mismatch of ort's bundled binary on this
# glibc-2.35 box; kokoro auto-detects the pip-installed onnxruntime .so.
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"], optional = true }
# Pure-Rust backend (no native onnxruntime .so), for Termux/aarch64. The `tract`
# feature drives tract-onnx *directly* (see src/bin/kokoro.rs): the model is split
# at the length regulator into two subgraphs (tools/split_kokoro.py) and each is
# optimized per-utterance with a concrete phoneme count — the `ort-tract` shim
# can't do this (it optimizes at load with a symbolic sequence_length and hits the
# #1802 Concat). Also used by the bounded probe (examples/tract_probe.rs).
tract-onnx = { version = "0.22.3", optional = true }

[features]
# onnxruntime backend (the `kokoro` binary); default so `cargo build` behaves as
# before. `tract` builds the pure-Rust `kokoro-tract` binary alongside it — build
# with `--features tract` to get BOTH and compare them; `--no-default-features
# --features tract` builds only the tract binary (no onnxruntime, for Termux).
default = ["onnx"]
onnx = ["dep:ort"]
tract = ["dep:tract-onnx"]
# Step 0 of docs/tract-support-plan.md: `cargo run --example tract_probe --features tract-probe`
tract-probe = ["dep:tract-onnx"]

[[example]]
name = "tract_probe"
required-features = ["tract-probe"]

[profile.release]
opt-level = 3

# Local, editable copies of the tract crates (vendored from crates.io 0.22.3).
# We expect to patch tract's shape inference / op support for Kokoro
# (see docs/tract-support-plan.md), so these are checked in and overridden here.
# Everything else still resolves normally from crates.io.
[patch.crates-io]
tract-core = { path = "third_party/tract/tract-core" }
tract-data = { path = "third_party/tract/tract-data" }
tract-hir = { path = "third_party/tract/tract-hir" }
tract-linalg = { path = "third_party/tract/tract-linalg" }
tract-nnef = { path = "third_party/tract/tract-nnef" }
tract-onnx = { path = "third_party/tract/tract-onnx" }
tract-onnx-opl = { path = "third_party/tract/tract-onnx-opl" }
