[package]
name = "kukuryku"
version = "0.1.0"
edition = "2024"

# The primary binary: pure-Rust Kokoro (tract). `kokoro-tract` below is the same
# program under its original name, kept so existing scripts and docs keep working.
[[bin]]
name = "ryk"
path = "src/bin/kokoro_tract.rs"
required-features = ["tract"]

# Orpheus-3B + SNAC via Candle; opt-in (heavy candle git-fork dep tree).
[[bin]]
name = "speak-orpheus"
path = "src/main.rs"
required-features = ["orpheus"]

[[bin]]
name = "kokoro-onyx"
path = "src/bin/kokoro.rs"
required-features = ["onnx"]

# Pure-Rust counterpart of `kokoro-onyx`; same pipeline, tract instead of onnxruntime.
# Alias of `ryk` — same source, same behavior.
[[bin]]
name = "kokoro-tract"
path = "src/bin/kokoro_tract.rs"
required-features = ["tract"]

[dependencies]
# kaarrot fork: CPU decode fast path (forward_decode_token_into + repack kernels).
# Enable at runtime with CANDLE_CPU_DECODE_EXECUTOR=1 and build with
# RUSTFLAGS='-C target-cpu=native' (AVX2+FMA) to engage the SIMD kernels.
candle-core = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed", optional = true }
candle-nn = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed", optional = true }
candle-transformers = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed", optional = true }
tokenizers = { version = "0.20", optional = true }
hf-hub = "0.4"
serde_json = "1"
bytemuck = "1"
anyhow = "1"
# Kokoro prototype (bin: kokoro) — ONNX Runtime via load-dynamic: the binary
# dlopens an onnxruntime .so at runtime (ORT_DYLIB_PATH) instead of static-linking
# a prebuilt one. Avoids the glibc-2.38 mismatch of ort's bundled binary on this
# glibc-2.35 box; kokoro auto-detects the pip-installed onnxruntime .so.
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"], optional = true }
# Pure-Rust backend (no native onnxruntime .so), for Termux/aarch64. The `tract`
# feature drives tract-onnx *directly* (see src/bin/kokoro.rs): the model is split
# at the length regulator into two subgraphs (tools/split_kokoro.py) and each is
# optimized per-utterance with a concrete phoneme count — the `ort-tract` shim
# can't do this (it optimizes at load with a symbolic sequence_length and hits the
# #1802 Concat). Also used by the bounded probe (examples/tract_probe.rs).
tract-onnx = { version = "0.22.3", optional = true }
# tract's matmul/conv kernels are single-threaded by default; the `multithread-mm`
# feature adds a rayon-backed executor. We opt in and set a thread pool at runtime
# (see kokoro_tract.rs) so the conv-heavy stage-2 vocoder fans out across cores —
# onnxruntime already does this, and it's the bulk of the tract/ORT runtime gap.
tract-linalg = { version = "0.22.3", optional = true, features = ["multithread-mm"] }
# kokoro-tract churns through hundreds of tens-of-MB intermediate tensors per synth;
# glibc mmaps/munmaps every block above the mmap threshold, so each op eats first-touch
# page faults on its output. mimalloc retains and reuses those large segments across the
# alloc/free churn (installed as the kokoro-tract #[global_allocator]). ~8% infer win,
# bit-identical, and portable (helps the Termux/musl target too, unlike glibc mallopt).
mimalloc = { version = "0.1", default-features = false, optional = true }

[features]
# `tract` (the pure-Rust `ryk` binary) is the default, so a plain `cargo build`
# produces only `ryk` + its `kokoro-tract` alias — no onnxruntime needed.
# `onnx` builds the onnxruntime-backed `kokoro-onyx` binary: `--features onnx` gets
# BOTH backends to compare them; `--no-default-features --features onnx` builds
# only the onnx binary.
default = ["tract"]
onnx = ["dep:ort"]
# `speak-orpheus` binary: Orpheus-3B + SNAC via the candle git fork. Opt-in so
# the default Kokoro build doesn't compile the heavy candle dependency tree.
orpheus = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
tract = ["dep:tract-onnx", "dep:tract-linalg", "dep:mimalloc"]
# Step 0 of docs/tract-support-plan.md: `cargo run --example tract_probe --features tract-probe`
tract-probe = ["dep:tract-onnx"]

[[example]]
name = "tract_probe"
required-features = ["tract-probe"]

[profile.release]
opt-level = 3

# Local, editable copies of the tract crates (vendored from crates.io 0.22.3).
# We expect to patch tract's shape inference / op support for Kokoro
# (see docs/tract-support-plan.md), so these are checked in and overridden here.
# Everything else still resolves normally from crates.io.
[patch.crates-io]
tract-core = { path = "third_party/tract/tract-core" }
tract-data = { path = "third_party/tract/tract-data" }
tract-hir = { path = "third_party/tract/tract-hir" }
tract-linalg = { path = "third_party/tract/tract-linalg" }
tract-nnef = { path = "third_party/tract/tract-nnef" }
tract-onnx = { path = "third_party/tract/tract-onnx" }
tract-onnx-opl = { path = "third_party/tract/tract-onnx-opl" }
