[package]
name = "kukuryku"
version = "0.1.0"
edition = "2024"

# The primary binary: pure-Rust Kokoro (tract). `kokoro-tract` below is the same
# program under its original name, kept so existing scripts and docs keep working.
[[bin]]
name = "ryk"
path = "src/bin/kokoro_tract.rs"
required-features = ["tract"]

# Orpheus-3B + SNAC via Candle; opt-in (heavy candle git-fork dep tree).
[[bin]]
name = "speak-orpheus"
path = "src/main.rs"
required-features = ["orpheus"]

# Named for the `ort` crate (ONNX Runtime) it wraps. NOT `kokoro-onyx`: that name
# belongs to the assets directory, and `ryk --install-assets` unpacks kokoro-onyx/
# beside the binaries — a binary of the same name would collide with it.
[[bin]]
name = "kokoro-ort"
path = "src/bin/kokoro.rs"
required-features = ["onnx"]

# Pure-Rust counterpart of `kokoro-ort`; same pipeline, tract instead of onnxruntime.
# Alias of `ryk` — same source, same behavior.
[[bin]]
name = "kokoro-tract"
path = "src/bin/kokoro_tract.rs"
required-features = ["tract"]

[dependencies]
# kaarrot fork: CPU decode fast path (forward_decode_token_into + repack kernels).
# Enable at runtime with CANDLE_CPU_DECODE_EXECUTOR=1 and build with
# RUSTFLAGS='-C target-cpu=native' (AVX2+FMA) to engage the SIMD kernels.
candle-core = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed", optional = true }
candle-nn = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed", optional = true }
candle-transformers = { git = "https://github.com/kaarrot/candle", branch = "feature/cpu-decode-optim-squashed", optional = true }
tokenizers = { version = "0.20", optional = true }
hf-hub = "0.4"
serde_json = "1"
bytemuck = "1"
anyhow = "1"
# Kokoro prototype (bin: kokoro) — ONNX Runtime via load-dynamic: the binary
# dlopens an onnxruntime .so at runtime (ORT_DYLIB_PATH) instead of static-linking
# a prebuilt one. Avoids the glibc-2.38 mismatch of ort's bundled binary on this
# glibc-2.35 box; kokoro auto-detects the pip-installed onnxruntime .so.
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"], optional = true }
# Pure-Rust backend (no native onnxruntime .so), for Termux/aarch64. The `tract`
# feature drives tract-onnx *directly* (see src/bin/kokoro.rs): the model is split
# at the length regulator into two subgraphs (tools/split_kokoro.py) and each is
# optimized per-utterance with a concrete phoneme count — the `ort-tract` shim
# can't do this (it optimizes at load with a symbolic sequence_length and hits the
# #1802 Concat). Also used by the bounded probe (examples/tract_probe.rs).
tract-onnx = { version = "0.22.3", optional = true }
# tract's matmul/conv kernels are single-threaded by default; the `multithread-mm`
# feature adds a rayon-backed executor. We opt in and set a thread pool at runtime
# (see kokoro_tract.rs) so the conv-heavy stage-2 vocoder fans out across cores —
# onnxruntime already does this, and it's the bulk of the tract/ORT runtime gap.
tract-linalg = { version = "0.22.3", optional = true, features = ["multithread-mm"] }
# kokoro-tract churns through hundreds of tens-of-MB intermediate tensors per synth;
# glibc mmaps/munmaps every block above the mmap threshold, so each op eats first-touch
# page faults on its output. mimalloc retains and reuses those large segments across the
# alloc/free churn (installed as the kokoro-tract #[global_allocator]). ~8% infer win,
# bit-identical, and portable (helps the Termux/musl target too, unlike glibc mallopt).
mimalloc = { version = "0.1", default-features = false, optional = true }
# `ryk --install-assets`: fetch + verify + unpack the release zip (see install.rs).
# All three are pure Rust, so the installer keeps `ryk`'s no-native-deps property
# on every target — rustls rather than native-tls (no OpenSSL to find on Windows),
# and zip's deflate-only feature set (its bzip2/zstd/lzma codecs are C).
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
sha2 = { version = "0.10", optional = true }
# XDG / OS-specific data dir for the unpacked model bundle. `cargo install`
# drops `ryk` into `~/.cargo/bin` (not writable at install time on system-wide
# installs, and the wrong place for ~600 MB of weights anyway), so
# `--install-assets` lands the bundle in `dirs::data_dir()/kukuryku/kokoro-onyx`
# instead — `~/.local/share/...` on Linux, `~/Library/Application Support/...`
# on macOS, `%APPDATA%\...` on Windows. Non-optional so both backends
# (tract + onnx) find the same install target.
dirs = "5"

[features]
# `tract` (the pure-Rust `ryk` binary) is the default, so a plain `cargo build`
# produces only `ryk` + its `kokoro-tract` alias — no onnxruntime needed.
# `onnx` builds the onnxruntime-backed `kokoro-ort` binary: `--features onnx` gets
# BOTH backends to compare them; `--no-default-features --features onnx` builds
# only the onnx binary.
default = ["tract"]
onnx = ["dep:ort"]
# `speak-orpheus` binary: Orpheus-3B + SNAC via the candle git fork. Opt-in so
# the default Kokoro build doesn't compile the heavy candle dependency tree.
orpheus = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
tract = ["dep:tract-onnx", "dep:tract-linalg", "dep:mimalloc", "dep:ureq", "dep:zip", "dep:sha2"]
# Step 0 of docs/tract-support-plan.md: `cargo run --example tract_probe --features tract-probe`
tract-probe = ["dep:tract-onnx"]

[[example]]
name = "tract_probe"
required-features = ["tract-probe"]

[profile.release]
opt-level = 3

# Local, editable copies of the tract crates (vendored from crates.io 0.22.3).
# We expect to patch tract's shape inference / op support for Kokoro
# (see docs/tract-support-plan.md), so these are checked in and overridden here.
# Everything else still resolves normally from crates.io.
[patch.crates-io]
tract-core = { path = "third_party/tract/tract-core" }
tract-data = { path = "third_party/tract/tract-data" }
tract-hir = { path = "third_party/tract/tract-hir" }
tract-linalg = { path = "third_party/tract/tract-linalg" }
tract-nnef = { path = "third_party/tract/tract-nnef" }
tract-onnx = { path = "third_party/tract/tract-onnx" }
tract-onnx-opl = { path = "third_party/tract/tract-onnx-opl" }
